kubernetes-networks/canary/ingresscanary.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: webapp-v2-canary
  annotations:
    nginx.ingress.kubernetes.io/app-root: /home
    nginx.ingress.kubernetes.io/canary: "true"
    nginx.ingress.kubernetes.io/canary-by-header: "test"
    nginx.ingress.kubernetes.io/canary-by-header-value: "test"
spec:
  ingressClassName: nginx
  rules:
  - host: # your civo dns name
    http:
      paths:
      - path: /home
        pathType: Exact
        backend:
          service:
            name: webapp-v2
            port:
              number: 80
      - path: /version
        pathType: Exact
        backend:
          service:
            name: webapp-v2
            port:
              number: 80
